@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.6.1 (Release 181)"
+#define KPPPVERSION "1.6.2 (Release 182)"
 #endif
