@@ -1,3 +1,11 @@
+1999-02-04  Harri Porten  <porten@kde.org>
+
+	* main.cpp: remove stale pidfile before creating new the
+	one. Otherwise creation with O_EXCL fails.
+	* runtests.cpp: removed securityTest(). $HOME check wasn't fully
+	functional and not needed anymore.
+	* runtests.cpp: re-enabled test for pppd's s-bit if eff. uid != 0.
+
 1999-02-03  Mario Weilguni <mweilguni@kde.org>
 
 	* fixed a bug in my testing code
